Cleared up repo, removed fnp-reporter and fnp-server

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,10 @@
 .vscode/
 .idea/
 __pycache__/
+.ipynb_checkpoints/
 
-# Directories
-saved_models/
-training/
-
-
-classifier/
+# Builds
 venv/
+build/
+dist/
+fnp_models.egg-info/
